--- a/Assignment_1/cssLink.html
+++ b/Assignment_1/cssLink.html
@@ -15,7 +15,7 @@
 
   <body>
 
-    <p>This is some awesome text</p>
+    <p>This is some awesome text. New change.</p>
     <p class="giant">This is some larger text by class</p>
     <p id="jollyGreen" class="giant">This is some jolly green text by id</p>
 
